discussion/kv_engine/149093/149093_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma WriteDocs histograms for cbstats kvtimings

Change-Id: I7eb4d8c5f2c88653c4e39c56b5a2f0ffa11239ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-30 15:54:23.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-30 16:34:23.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29727/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29727/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34646/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34646/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8000/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8000/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8650/ : FAILURE

Compile error at [2021-03-30T15:56:39.391Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8650/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9721/ : FAILURE

Compile error at [2021-03-30T16:23:12.522Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9721/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9946/ : FAILURE

Compile error at [2021-03-30T16:33:01.687Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9946/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17494/ : FAILURE

Compile error at [2021-03-30T16:30:17.166Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17494/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9585/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
